fix pre code overflow

--- a/src/style.css
+++ b/src/style.css
@@ -662,11 +662,23 @@ nav img {
 }
 
 .fiche-detail__exemple > pre {
+  width: 95%;
   background-color: var(--color-surface-variant);
   border-radius: var(--radius-lg);
   border: 1px solid var(--color-border);
   padding: var(--space-lg);
   box-shadow: var(--shadow-soft);
+
+  max-width: 100%;
+  box-sizing: border-box;
+  overflow-x: auto;
+  white-space: pre;
+}
+
+.fiche-detail__exemple > pre code {
+  display: block;
+  white-space: pre;
+  word-break: break-word;
 }
 
 .fiche-detail__section:first-child {
